update docker.md